# AutoPatch-LLM

./: .gitignore  CONTRIBUTING.md  README  README.md  Taskfile.yml  docker-compose.yml  file.txt  gpt.py  main.py  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.env.example  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  super-linter.env
.github/ISSUE_TEMPLATE/: ✨-feature-request.md  🐞-bug-report.md  📌-task.md
.github/workflows/: build-and-push-docker-images.yml  build-datatypes-package.yml  pre-release.yml  release.yml  super-linter.yml  test-coverage.yml  test-with-coverage-report.yml
afl-2.52b/: afl-gotcpu
assets/: README.md  create-docker-network.py  remove-all-docker-images.sh  system_prompt_example_v0.txt  user_prompt_v1.txt
assets/ArchitecturalDecisionRecords/: 002.adr-config-format.md  adr-config-format.md  adr-independent-fuzzing-component.md  template-adr.md
assets/Diagrams/: auto-patch-high-level-design-sequence-diagram.md  fuzzing-service-high-level-flowchat.md  fuzzing-service-sequence-diagram-detailed.md  fuzzing-service-sequence-diagram-simple.md
assets/LLM-Prompts/: full_prompt_example_v1.txt  user_prompt_example_v0.txt
assets/TechnicalSpikes/: 000.template-technical-spike.md  template-technical-spike.md
assets/input_codebase/: boflow7.c  complex3.c  complex4.c  complex6_f.c  conditional_double_free.c  fstring1_f.c  fstring2.c  fstring4.c  head_boflow1.c  useAfterFree1.c
assets/notebooks/: CPGdemo.ipynb  cpg_manipulation.py  data_analysis.ipynb
assets/seed_input/: complex_input
data/fuzz_svc_output/: crashes.csv
docs/: FuzzBench.md  QuickStart.md  README.md  afl_troubleshooting.md  afl_troubleshooting.txt  common_afl_issues.txt  index.html  style.css
docs/ArchitecturalDecisionRecords/: 000.template-adr.md  003.adr-independent-fuzzing-component.md  004.adr-cloudevents.md  005.machine-comminucation-with-mqtt.md  006.adr-afl2.52b-to-aflplusplus.md  adr-cloudevents.md
docs/Diagrams/: mqtt-concurrency.md
docs/References/: references.bib
docs/TechnicalSpikes/: 001.mqtt-techincal-spike.md  002.fuzz-bench-techincal-spike.md  002.oss-fuzz-techincal-spike.md  003.oss-fuzz-technical-spike.md  004.afl2.52b-to-afl++-technical-spike.md  004.aflplusplus-techinical-spike.md  005.meta-infer.md  006.oss-fuzz-arvo-dataset.md  006.oss-fuzz-integration-technical-spike.md
input_codebase/: boflow1.c  boflow2.c  boflow3_f.c  boflow5.c  boflow6_f.c  complex1_f.c  complex7_f.c  fstring3.c
main/: Dockerfile  Taskfile.yml  gpt.py  main.py
src/: .env.example  Dockerfile  README.md  Taskfile.yml  archive_main.py  dev-requirements.txt  main.py
src/autopatchdatatypes/: README.md  Taskfile.yml  pyproject.toml
src/autopatchdatatypes/autopatchdatatypes/: __init__.py  cpg_detail.py  cpg_scan_result.py  crash_detail.py  patch_request.py  patch_response.py  patch_response_status.py  test_cpg_detail.py  test_crash_detail.py  transformer_metadata.py
src/autopatchdatatypes/tests/: test_crash_detail.py
src/autopatchpubsub/: Dockerfile  README.md  Taskfile.yml  mqtt-produce-consume.py  pyproject.toml
src/autopatchpubsub/archive/: mqtt-produce-consume.py
src/autopatchpubsub/autopatchpubsub/: __init__.py  message_broker_client.py  test_message_broker_client.py
src/autopatchpubsub/tests/: test_message_broker_client.py
src/autopatchshared/: README.md  Taskfile.yml  pyproject.toml
src/autopatchshared/autopatchshared/: __init__.py  get_current_timestamp.py  init_logging.py  load_config_from_json.py  make_compile.py  observability.py  test_init_logging.py  test_load_config_as_json.py  test_make_compile.py
src/autopatchshared/tests/: test_get_current_timestamp.py  test_init_logging.py  test_load_config_as_json.py  test_make_compile.py
src/code-property-graph-generator/: .env.example  Dockerfile  README.md  Taskfile.yml  code_property_graph_generator.py  cpg_svc_config.py  pyproject.toml  requirements.txt  test_code_property_graph_generator.py
src/code-property-graph-generator/config/: config.json  dev-config.json  dev-logging-config.json  logging-config.json
src/fuzzing-service/: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  adr-config-format.md  config.json  config.json.example  debug.env.example  dev-config.json  dev-requirements.txt  fuzz-svc-config.json.example  fuzz_svc_config.py  fuzzing-service-main.py  fuzzing_service.py  logging-config.json  pyproject.toml  pytest.ini  requirements.txt  test_fuzzing_service.py
src/fuzzing-service/config/: config.json  dev-config.json  dev-logging-config.json  logging-config.json
src/fuzzing-service/data/: README.md
src/fuzzing-service/log/: README.md
src/fuzzing-service/scratch/: cloud-event.py  example_mqtt_output.json  example_mqtt_output_cloud_event.json
src/fuzzing-service/seed_input/: long_input
src/fuzzing-service/tests/: __init__.py  devcontainer-test-config.json  pytest.ini  test_fuzzing_service.py
src/llm-dispatch-service/: .env.example  Dockerfile  README.md  Taskfile.yml  llm_dispatch_svc.py  llm_dispatch_svc_config.py  pyproject.toml  requirements.txt  test_llm_dispatch_service.py
src/llm-dispatch-service/config/: config.json  dev-config.json  dev-logging-config.json  logging-config.json
src/llm-dispatch-service/data/prompts/: old_user_prompt.txt  system_prompt.txt  user_prompt.txt
src/patch-evaluation-service/: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  new_patch_evaluation_service.py  patch_eval_config.py  patch_evaluation_service.py  pyproject.toml  requirements.txt  test_patch_evaluation_service.py
src/patch-evaluation-service/config/: config.json  dev-config.json  dev-logging-config.json  logging-config.json  notes.txt
src/patch-evaluation-service/tests/: test_patch_evaluation_service.py
(+176 files in other folders)
