[project]
name = 'autopatch'
version = '0.7.3'
requires-python = '>=3.12.3'
description = ''
authors = [
    { name = 'Robert D. Hernandez', email = 'rherna70@uic.edu' },
    { name = 'Lily Leith', email = 'lleit@uic.edu' },
    { name = 'Nico Gibson', email = 'ngibs01@jaguar.tamu.edu' },
    { name = 'Matthew Trevino', email = 'mtrev049@jaguar.tamu.edu' }
]

[tool.isort]
profile = 'black'
src_paths = ['src']

# Optional dependencies (e.g., for development)
[project.optional-dependencies]
dev = [
    'isort',
    'black',
    'flake8',
    'pytest',
    'pytest-asyncio',
    'pytest-cov',
    'build'
]