[project]
name = 'autopatchpubsub'
version = '0.3.0'
description = 'Message Broker Publish Subscribe Facade for the autopatch project'
authors = [
    { name = 'Robert D. Hernandez', email = 'rherna70@uic.edu' }
]
requires-python = '>=3.12.3'

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['autopatchpubsub']
