[project]
name = 'code-property-graph-generator'
version = '0.9.1'
requires-python = '>=3.12.3'
readme = 'README.md'
authors = [
    { name = 'Robert D. Hernandez', email = 'rherna70@uic.edu' },
    { name = 'Nico Gibson', email = 'ngibs01@jaguar.tamu.edu' },
    { name = 'Matthew Trevino', email = 'mtrev049@jaguar.tamu.edu' }
]

[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[tool.isort]
profile = 'black'
