[project]
name = 'autopatch.fuzzing-service'
version = '0.6.2'
requires-python = '>=3.12.3'
readme = 'README.md'
authors = [
    { name = 'Robert D. Hernandez', email = 'rherna70@uic.edu' },
    { name = 'Lily Leith', email = 'lleit@uic.edu' }
]

[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[tool.isort]
profile = 'black'
