[project]
name = 'autopatch.llm-dispatch'
version = '0.6.1'
requires-python = '>=3.12.3'
readme = 'README.md'
authors = [
    { name = 'Robert D. Hernandez', email = 'rherna70@uic.edu' },
]

[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[tool.isort]
profile = 'black'
