[project]
name = 'autopatch.patch-evaluation-service'
version = '0.3.0'
requires-python = '>=3.12.3'
readme = 'README.md'
authors = [
    { name = 'Lily Leith', email = 'lleit@uic.edu' }
    { name = 'Robert D. Hernandez', email = 'rherna70@uic.edu' },
]

[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[tool.isort]
profile = 'black'
