[project]
name = 'autopatch.patch-evaluation-service'
version = '0.9.0'
requires-python = '>=3.12.3'
readme = 'README.md'
authors = [
    { name = 'Robert D. Hernandez', email = 'rherna70@uic.edu' },
    { name = 'Lily Leith', email = 'lleit@uic.edu' }
]

[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[tool.isort]
profile = 'black'

# optional dependencies (e.g., for development)
[project.optional-dependencies]
dev = [
    'isort',
    'black',
    'flake8',
    'pytest',
    'pytest-cov'
]
